# utilities.aws-utils

./: CLAUDE.md  README.md  utilities.aws-utils.code-workspace
crates/athena/: CHANGELOG.md  Cargo.toml  README.md
crates/athena/src/: error.rs  lib.rs  query.rs  stream.rs  timeout.rs  wait.rs
crates/dynamodb/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
crates/dynamodb/src/: cache.rs  csv.rs  error.rs  holder.rs  lib.rs  record.rs  table.rs
crates/firehose/: CHANGELOG.md  Cargo.toml  README.md
crates/firehose/src/: error.rs  firehose.rs  lib.rs
crates/kinesis_data_streams/: CHANGELOG.md  Cargo.toml  README.md
crates/kinesis_data_streams/src/: builder.rs  error.rs  kinesis_data_stream.rs  kinesis_data_streams.rs  lib.rs
crates/lambda/: CHANGELOG.md  Cargo.toml  README.md
crates/lambda/src/: error.rs  lambda.rs  lib.rs
crates/s3/: CHANGELOG.md  Cargo.toml  README.md
crates/s3/src/: bucket.rs  error.rs  lib.rs  object.rs  presigned.rs  s3.rs
crates/scheduler/: CHANGELOG.md  Cargo.toml  README.md
crates/scheduler/src/: builder.rs  error.rs  lib.rs  scheduler.rs
crates/scheduler/src/builder/: schedule_expression_builder.rs
crates/secretsmanager/: CHANGELOG.md  Cargo.toml  README.md
crates/secretsmanager/src/: error.rs  lib.rs  secretsmanager.rs
crates/sqs/: CHANGELOG.md  Cargo.toml  README.md
crates/sqs/src/: builder.rs  create_queue_attribute_builder.rs  error.rs  lib.rs  send_message_batch_entries_builder.rs  sqs.rs
crates/sqs/src/builder/: create_queue_attribute_builder.rs  delete_message_batch_entries_builder.rs
crates/ssm/: CHANGELOG.md  Cargo.toml  README.md
crates/ssm/src/: error.rs  lib.rs  ssm.rs
