[package]
name = "aws_utils_dynamodb"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = { version = "1.8", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1"
aws-smithy-types-convert = { version = "0.60.9", features = ["convert-streams"] }
futures-util = "0.3.31"
thiserror = "2"