[package]
name = "aws_utils_lambda"
version = "0.1.0"
edition = "2024"
description = "AWS Lambda utilities for Rust"
readme = "README.md"
homepage = "https://github.com/UniqueVision/utilities.aws-utils"
repository = "https://github.com/UniqueVision/utilities.aws-utils"
license = "MIT OR Apache-2.0"
keywords = ["aws", "lambda", "serverless", "functions"]
categories = ["web-programming", "api-bindings"]

[dependencies]
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-lambda = "1"
thiserror = "2"