[package]
name = "aws_utils_s3"
version = "0.2.0"
edition = "2024"
description = "AWS S3 utilities for common operations like listing, uploading, downloading, and deleting objects"
repository = "https://github.com/UniqueVision/utilities.aws-utils"
homepage = "https://github.com/UniqueVision/utilities.aws-utils"
documentation = "https://docs.rs/aws_utils_s3"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["aws", "s3", "cloud", "storage", "utilities"]
categories = ["api-bindings", "asynchronous", "web-programming"]

[dependencies]
aws-config = { version = "1.8", features = ["behavior-version-latest"] }
aws-credential-types = "1"
aws-sdk-s3 = "1"
aws-smithy-types-convert = { version = "0.60.9", features = ["convert-streams"] }
futures-util = "0.3.31"
thiserror = "2"
tokio = { version = "1", features = ["io-util"] }
urlencoding = "2.1.3"