[package]
name = "aws_utils_scheduler"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-scheduler = "1"
aws-smithy-types-convert = { version = "0.60", features = ["convert-streams"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
futures-util = "0.3.31"
thiserror = "2"