[package]
name = "aws_utils_secretsmanager"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = { version = "1.8", features = ["behavior-version-latest"] }
aws-sdk-secretsmanager = "1"
thiserror = "2"
serde_json = "1"

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }