[package]
name = "aws_utils_secretsmanager"
version = "0.2.1"
edition = "2024"
description = "AWS Secrets Manager utilities for retrieving secret values"
license = "MIT"
repository = "https://github.com/UniqueVision/utilities.aws-utils"
homepage = "https://github.com/UniqueVision/utilities.aws-utils"
documentation = "https://docs.rs/aws_utils_secretsmanager"
readme = "README.md"
keywords = ["aws", "secrets-manager", "secrets", "credentials", "cloud"]
categories = ["api-bindings", "web-programming", "config"]

[dependencies]
aws-config = { version = "1.8", features = ["behavior-version-latest"] }
aws-sdk-secretsmanager = "1"
thiserror = "2"
serde_json = "1"

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }