[package]
name = "aws_utils_sqs"
version = "0.3.0"
edition = "2024"
description = "AWS SQS utilities for Rust"
homepage = "https://github.com/UniqueVision/utilities.aws-utils"
repository = "https://github.com/your-username/utilities.aws-utils"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["aws", "sqs", "queue", "messaging"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-sqs = "1"
thiserror = "2"
serde_json = "1"

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
